fix ui breaking  on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
-[class*=" elevation-"] {
-  box-shadow: 0px 0px 22px 0px rgba(0, 0, 0, 0.1) !important;
+.elevation-1 {
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1) !important;
 }
 
-.elevation-0 {
-  box-shadow: none !important;
+.elevation-10 {
+  box-shadow: 0px 0px 22px 0px rgba(0, 0, 0, 0.1) !important;
 }
